--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+body {
+  font-family: "Proxima Nova Regular", serif;
+  font-weight: 700;
+  font-style: normal;
+  scroll-behavior: smooth;
+}
+
 .App {
   text-align: center;
 }
