--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@ html, body{
   width: 100%;
   height: 100%;
   position: absolute;
-  font-family: "Proxima Nova Regular", serif;
+  font-family: Inter var,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
   font-weight: 700;
   font-style: normal;
   scroll-behavior: smooth;
