--- a/src/App.css
+++ b/src/App.css
@@ -2,19 +2,33 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-size: 100%; /* 设置基础字体大小 */
 }
+
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 
 html, body{
   width: 100%;
   height: 100%;
   position: absolute;
-  font-family: Inter var,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
-  font-weight: 700;
-  font-style: normal;
+  font-family: "Arial", sans-serif;
   scroll-behavior: smooth;
   background-color: #ffffff;
+  line-height: 1.5;  /* 统一行高 */
+  font-weight: normal;  /* 统一字体粗细 */
 }
 
+html{
+  font-size: 15px
+}
+
+body {
+  font-size: 1rem;
+}
 
 
 .App {
