--- a/src/widget/topNavBar/topNavBar.module.css
+++ b/src/widget/topNavBar/topNavBar.module.css
@@ -36,24 +36,29 @@
 /* 左侧样式 */
 .left {
     width: 30%;
+    align-items: center;
 }
 
-.name {
-    font-size: 30px;
+.title {
+    font-size: 2rem;
     font-weight: bold;
+    font-style: normal;
+    text-decoration: none;
+    color: inherit;
 }
 
 /* 右侧链接容器 */
 .right {
     width: 70%;
     display: flex;
-    gap: 100px;
+    gap: 10rem;
+    align-items: center;
 }
 
 /* 链接样式 */
 .link {
     text-decoration: none;
-    font-size: 20px;
+    font-size: 1.5rem;
     transition: color 0.3s ease;
 }
 
