--- a/src/widget/paperBlock/paperBlock.module.css
+++ b/src/widget/paperBlock/paperBlock.module.css
@@ -5,7 +5,7 @@
     gap: 20px;
     margin: 10px;
     padding: 20px;
-    background-color: #f9f9f9;
+    background-color: inherit;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
@@ -24,7 +24,7 @@
 }
 
 .referenceItemFrame:hover {
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
+    box-shadow: 0 0 24px 12px rgba(0, 0, 0, 0.15);
 }
 
 /* 图片部分的容器 */
