--- a/src/pages/Main/publicationSection/publicationSection.css
+++ b/src/pages/Main/publicationSection/publicationSection.css
@@ -1,13 +1,13 @@
-#feature-publication-carousel .carousel-item {
-    height: 500px; /* 设置固定高度，值可以根据需求调整 */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden; /* 防止超出部分显示 */
-}
+/*#feature-publication-carousel .carousel-item {*/
+/*    height: 500px; !* 设置固定高度，值可以根据需求调整 *!*/
+/*    display: flex;*/
+/*    justify-content: center;*/
+/*    align-items: center;*/
+/*    overflow: hidden; !* 防止超出部分显示 *!*/
+/*}*/
 
-#feature-publication-carousel .carousel-item img {
-    max-height: 100%;
-    max-width: 100%;
-    object-fit: cover; /* 保证图片缩放比例 */
-}
+/*#feature-publication-carousel .carousel-item img {*/
+/*    max-height: 100%;*/
+/*    max-width: 100%;*/
+/*    object-fit: cover; !* 保证图片缩放比例 *!*/
+/*}*/
