--- a/src/widget/topNavBar/topNavBar.module.css
+++ b/src/widget/topNavBar/topNavBar.module.css
@@ -10,18 +10,10 @@
     justify-content: space-between;
     align-items: center;
     white-space: nowrap;
-    z-index: 999999;
+    z-index: 99999999999;
     transition: background-color 0.3s ease, color 0.3s ease, top 0.3s ease-in-out;
 }
 
-
-.navbarShow {
-    opacity: 0;
-}
-
-.navbarHide {
-    opacity: 1;
-}
 
 /* 深色模式样式 */
 .darkMode {
@@ -150,6 +142,7 @@ button:hover {
  --------------------------------------------*/
 .fullScreenNav {
     position: fixed;
+    top: 0;
     bottom: 0;
     left: 0;
     width: 100vw;
